fixed active modal hardcoding, added alt to modal image, renamed modal__content in ItemModal to prevent overlap

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -31,7 +31,7 @@
   cursor: pointer;
 }
 
-.modal__content {
+.modal-add-garment__content {
   position: relative;
   background-color: #fff;
   padding: 28px 28px 36px;
